    * "reset game" [James]
    * Inventory manipulation commands: "item in slot", "set item in
      slot", "item count in slot", "set item count in slot" [James]
    * "update level up learning" [James]
    * hspeak now automatically stores a backup copy of your script
      inside the .hs file. Use the -n command line option if you
      want to disable this feature [James]
    * On-keypress scripts are now run when the mouse is clicked if
      initmouse was called [Ralph]

  * Vikings of Midgard

  * Stuff only Developers Will Notice
    * New slice routines for rectangular objects of various styles that
      can be organized into a tree and positioned and sized relative to
      one another. [Mike]
    * RPG format number has been incremented to provide
      forward-compat warnings when loading new RPG files into
      old versions of game [James]

April 03 2009 [xocolatl+2]

  * Bugfixes
    * Bug 684: Lower half of inventory screen gets deleted when you
      load [James]
    * Bug 348: Weapon is drawn behind other heroes [James]
    * Bug 689: When a hero who is currently picking a target dies,
      next hero's targetting was broken [James]
    * Bug 698: Global variables 1025-4095 couldn't be set [Ralph]
    * "input string" was causing an endless loop if ESC was
      pressed and "suspend player" was active [James]
    * Bug 703: NPC extra's aren't cleaned on restart [James]
    * Bug 700: Erroneous globals over 32767 when loading form save game
      [James]
    * Bug 710: Text box import loads door tag value into door id [James]
    * Bug 712: default plotstring colors are wrong after a
      non-title-screen load [James]
    * Bug 674:A line of pixels is sometimes "vomited" into the corner
      of the sprite editor [James]
    * Removed obsolete warning about long filenames from relump
    * Removed obsolete unneeded linux-specific hacks from unlump
    * Bug 646: Delay before caption doesn't seem to work [James]