@@ -1200,7 +1200,7 @@ end</example>
 		<command id="initmouse">
 			<canon>init mouse</canon>
 			<shortname>init mouse</shortname>
-			<description>Initializes the mouse, returning <ref>true</ref> if one is present. This command should be run before any mouse functions are be used. It causes the normal mouse cursor to be hidden when over the game's window, and for mouse clicks to trigger on-keypress scripts. Therefore, it is a good idea to place this command in the newgame and loadgame scripts if you are going to use the mouse.<lb/><note>Running this command does not draw a cursor on screen - your script must do this itself by placing a slice or npc at the appropriate location.</note> Here is an example:</description>
+			<description>Initializes the mouse, returning <ref>true</ref> if one is present. This command should be run before any mouse functions are be used. It causes the normal mouse cursor to be hidden when over the game's window, prevents the mouse cursor from leaving the window, and causes mouse clicks to trigger on-keypress scripts. Therefore, it is a good idea to place this command in the newgame and loadgame scripts if you are going to use the mouse.<lb/><note>Running this command does not draw a cursor on screen - your script must do this itself by placing a slice or npc at the appropriate location.</note> Here is an example:</description>
 			<example>include,plotscr.hsd
 
 #Mouse cursor example
@@ -1222,27 +1222,27 @@ end</example>
 		<command id="mousepixelx">
 			<canon>mouse pixel X</canon>
 			<shortname>mouse pixel X</shortname>
-			<description>Returns the X coordinate in pixels of the mouse on the screen. <ref>initmouse</ref> must be called before this command can be used.</description>
+			<description>Returns the X coordinate in pixels of the mouse on the screen.</description>
 		</command>
 		<command id="mousepixely">
 			<canon>mouse pixel Y</canon>
 			<shortname>mouse pixel Y</shortname>
-			<description>Returns the Y coordinate in pixels of the mouse on the screen. <ref>initmouse</ref> must be called before this command can be used.</description>
+			<description>Returns the Y coordinate in pixels of the mouse on the screen.</description>
 		</command>
 		<command id="mousebutton">
 			<canon>mouse button (which)</canon>
 			<shortname>mouse button</shortname>
-			<description>Returns <ref>true</ref> if the specified mouse button is pressed. You can use the constants <ref>leftbutton</ref> and <ref>rightbutton</ref> to specify the button. <ref>initmouse</ref> must be called before this command can be used.</description>
+			<description>Returns <ref>true</ref> if the specified mouse button is pressed. You can use the constants <ref>leftbutton</ref> and <ref>rightbutton</ref> to specify the button.</description>
 		</command>
 		<command id="putmouse">
-			<canon>put mouse (X,Y)</canon>
+			<canon>put mouse (X, Y)</canon>
 			<shortname>put mouse</shortname>
-			<description>Changes the location of the mouse on the screen, in pixels. <ref>initmouse</ref> must be called before this command can be used.</description>
+			<description>Changes the location of the mouse on the screen, in pixels. Note that this function might do nothing, if the game's window is not active. <ref>initmouse</ref> should be called before this command is used.</description>
 		</command>
 		<command id="mouseregion">
 			<canon>mouse region (x min, x max, y min, y max)</canon>
 			<shortname>mouse region</shortname>
-			<description>Sets the edges of the rectangle to which the mouse is constricted. Use if you want to force the mouse into some region, like a choice selection box. <ref>initmouse</ref> must be called before this command can be used.</description>
+			<description>Sets the edges of the rectangle to which the mouse is constricted. Use if you want to force the mouse into some region, like a choice selection box. The maximum values are inclusive. Without arguments, resets the rectangle to the whole window. You can unrestrict the mouse and let it leave the window by calling <p>mouse region (-1, -1, -1, -1)</p>. <ref>initmouse</ref> should be called before this command is used.</description>
 		</command>
 	</section>
 	<section title="String Functions">
